--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('../static/assets/projects/5b7a8657b0abdc87d0290946fc4b3438.jpg') ">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('../static/assets/images/moon.png') ">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
